[package]
name = "air_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
soapysdr = "0.4.1"
num-complex = "0.4.4"
plotters = "0.3"
clap = { version = "4.5.4", features = ["derive"] }
chrono = "0.4"
byteorder = "1.5.0"
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
tiny_http = "0.12"
mime_guess = "2"


[features]
tui_test = []

